<resources>
    <string name="app_name">Sample Android app</string>
    <string name="credentials_prompt">Please enter your LabsMobile username and password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register in the website</string>
    <string name="register_prompt">Don\'t have an account?</string>
    <string name="credentials_change_prompt">You can later change the credentials from the settings menu</string>
    <string name="sms_services">SMS services</string>
    <string name="query_services">Query Services</string>
    <string name="tfv_services">Two Factor Verification Service</string>
    <string name="title_activity_sms">SMS Service</string>
    <string name="phone_number">Mobile number</string>
    <string name="message_text_hint">Type your message here</string>
    <string name="send">Send</string>
    <string name="phone_number_prompt">without the \'00\' code  or the \'+\' symbol</string>
    <string name="title_activity_queries">Queries Service</string>
    <string name="query_balance">Query balance</string>
    <string name="query_prices">Query prices</string>
    <string name="countries_prompt">Input the countries, separated with commas</string>
    <string name="countries_hint">Countries</string>
    <string name="settings">Settings</string>
    <string name="login_details">Login details</string>
    <string name="responseNOK">There was an error with the request. Code: %1$s - Message: %2$s</string>
    <string name="balance_response">Your balance is: %1$s</string>
    <string name="responseError">An error occurred: %1$s</string>
    <string name="send_sms_success">SMS sent successfully</string>
    <string name="test_mode">Test mode</string>
    <string name="unicode">Unicode</string>
    <string name="long_message">Long message</string>
    <string name="title_activity_otp">Two factor verification</string>
    <string name="tfv_request_button">Start two-factor verification process</string>
    <string name="tfv_check_button">Check if number is verified</string>
    <string name="title_activity_two_factor_verification_check">Check verification
    </string>
    <string name="title_activity_two_factor_verification_request">Request code</string>
    <string name="env_hint">environment (optional)</string>
    <string name="check">Check</string>
    <string name="request">Request code via SMS</string>
    <string name="tfv_check_verified">The number is verified.</string>
    <string name="tfv_check_not_verified">A verification process is pending.</string>
    <string name="tfv_check_noCode">The number is not verified and there is no verification process in progress.</string>
    <string name="otp_message">Sample app verification code: \u0025CODE\u0025. Have a nice day!</string>
    <string name="otp_message_sender">111</string>
    <!--<string name="otp_message_sender">LABSMOBILE</string>-->
    <string name="title_activity_two_step_verification_code">Verification code</string>
    <string name="tfv_prompt_new_1">You will soon receive an SMS with a code and your number will be automatically verified.</string>
    <string name="tfv_prompt_new_2">In case you receive the SMS and we fail to automatically extract the code, please enter the code in the box below.</string>
    <string name="otp">Code</string>
    <string name="ok">OK</string>
    <string name="title_activity_two_factor_verification_result">Result</string>
    <string name="verificationNOK">We were not able to verify your mobile number, please try again.</string>
    <string name="verificationOK">Your number has been verified!</string>
    <string name="title_activity_two_factor_verification">Two factor verification</string>
    <string name="request_new_code">Request new code</string>
    <string name="request_new_code_prompt">OR request a new code and start the process again</string>
    <string name="check_status">Check verification status</string>
    <string name="request_code_prompt">Your number is not verified. Please use the button below to request a code.</string>
    <string name="error_shared_prefs">An internal error occurred</string>
    <string name="tfv_prompt_old_1">A pending request for your phone number has been found.</string>
    <string name="tfv_prompt_old_2">You should have received an SMS containing a code. Please enter the code in the box below.</string>
    <string name="code_invalid">The code you have entered is not valid.</string>
</resources>
