<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.labsmobile.example.CredentialActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credentials_prompt"
            android:id="@+id/credentials_prompt" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:text="dev@app-we-go.com"
            android:id="@+id/credentials_username"
            android:hint="@string/username" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:text="hh69bt89"
            android:id="@+id/credentials_password"
            android:hint="@string/password" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:enabled="true"
            android:text="Continue"
            android:id="@+id/continue_button" />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/credentials_change_prompt"
            android:text="@string/credentials_change_prompt"
            style="?android:attr/textAppearanceSmall"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:id="@+id/register_prompt"
            android:layout_gravity="right"
            android:text="@string/register_prompt" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/register_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_gravity="right" />

    </LinearLayout>

</RelativeLayout>
