<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/sms_services_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sms_services" />

    <Button
        android:id="@+id/query_services_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/query_services" />

    <Button
        android:id="@+id/otp_services_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tfv_services" />

</LinearLayout>
